# scrat

./: .gitattributes  .gitignore  .justfile  .repo.yml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  deny.toml  rust-toolchain.toml  scrat
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/commands/: pr.md
.claude/plans/: eventual-snacking-bird.md  joyful-growing-dove.md  peppy-zooming-phoenix-stage2.md  peppy-zooming-phoenix.md
.claude/skills/adding-commands/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/docs/: README.md  releases.md
.github/workflows/: cd.yml  ci.yml  release.yml
config/: scrat.toml.example  scrat.yaml.example
crates/scrat/: Cargo.toml
crates/scrat-core/: Cargo.toml
crates/scrat-core/src/: bump.rs  config.rs  deps.rs  ecosystem.rs  error.rs  git.rs  hooks.rs  init.rs  lib.rs  notes.rs  pipeline.rs  preflight.rs  ship.rs  stats.rs
crates/scrat-core/src/detect/: mod.rs  rust.rs
crates/scrat-core/src/version/: conventional.rs  explicit.rs  interactive.rs  mod.rs
crates/scrat-core/templates/: init-documented.toml  init-documented.yaml  init-minimal.yaml  release-notes.tera
crates/scrat/src/: lib.rs  main.rs  observability.rs  terminal.rs
crates/scrat/src/commands/: bump.rs  doctor.rs  info.rs  init.rs  mod.rs  notes.rs  preflight.rs  ship.rs
crates/scrat/tests/: cli.rs  config_integration.rs
docs/: README.md  getting-started.md
docs/plans/: 2026-02-17-gh-release-config-and-no-flags-design.md  2026-02-17-gh-release-config-and-no-flags.md  2026-02-17-init-command-design.md  2026-02-17-init-command-plan.md
npm/scrat/: cli.js  index.js  install.js  package.json
scripts/: rename.sh
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: completions.rs  install.rs  man.rs  mod.rs
